--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <html>
-
+    <head>
+    <link rel="stylesheet" href="home.css" /> 
+    </head>
+    <title>PointCoin News</title>
 <body>
-    <h1>PointCoin News</h1>
+    <div class="head">
+        <img src="./pointcoinnews.png">
+        <div class="links">
+            <a href="http://bitcoin-class.org">Class</a> | 
+            <a href="https://github.com/PointCoin">Github</a> |
+            <a href="https://github.com/PointCoin">Setup</a>
+        </div>
+    </div>
 
+    <hr>
+    <div class="news">
+        <div class="story">
+        <h3>Influx of Miners Coming!<small> 2.4.2015</small></h3>
+        <p>Professor Evan's issued a dire warning today to those who 
+        wait to start collecting coins. Since the difficulty of mining
+        readjusts to the number of miners working on blocks, the longer a
+        miner waits to start the harder it becomes to collect coins.
+        </p>
+        <p>
+        The TA's echoed this concern, but acknowledge that unforseen, calamatous events
+        on the network will readjust the required coin threshold in the student's favor.
+        More news to follow.
+        </p>
+        </div>
+        <div class="story">
+        <h3>The Network is Live! <small> 2.2.2015</small></h3>
+        <p>The dashing TA's for UVA's CryptoCurrency Cafe course launched PointCoin, an
+        entirely unique digital cash system, last night. The digital currency is dedicated to creating 
+        a fixed peg between points on Project 2 and coins held by account holders
+        enrolled in CS 4501.
+        </p>
+        <p>Staff had several reasons for establishing their own currency. The main goal
+        was to give students tangible exerpience interacting with these
+        new digital cash schemes at the network level. They also wanted students
+        to mine these coins using their own hardware.
+        </p>
+        <p>When questioned further the instructor admits that other goods
+        will be redeemable with PointCoin. Exactly what goods are for sale is yet to be revealed.
+        </p>
+        </div>
+    </div>
 </body>
 </html>
