--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>PointCoin News</title>
 <body>
     <div class="head">
-        <img src="./pointcoinnews.png">
+        <img src="./pointcoinnews.png" />
+
+    <hr>
         <div class="links">
             <a href="http://bitcoin-class.org">Class</a> | 
             <a href="https://github.com/PointCoin">Github</a> |
@@ -13,7 +15,6 @@
         </div>
     </div>
 
-    <hr>
     <div class="news">
         <div class="story">
         <h3>Influx of Miners Coming!<small> 2.4.2015</small></h3>
