--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="news">
         <div class="story">
         <h3>Influx of Miners Coming!<small> 2.4.2015</small></h3>
-        <p>Professor Evan's issued a dire warning today to those who 
+        <p>Professor Evans' issued a dire warning today to those who 
         wait to start collecting coins. Since the difficulty of mining
         readjusts to the number of miners working on blocks, the longer a
         miner waits to start the harder it becomes to collect coins.
