Added wiki link

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="links">
             <a href="http://bitcoin-class.org">Class</a> | 
             <a href="https://github.com/PointCoin">Github</a> |
-            <a href="https://github.com/PointCoin">Setup</a>
+            <a href="https://github.com/PointCoin/pointcoind/wiki">Wiki</a>
         </div>
     </div>
 
     <div class="news">
         <div class="story">
-        <h3>Influx of Miners Coming!<small> 2.4.2015</small></h3>
+        <h3>Influx of Miners Coming!<small> 2.9.2015</small></h3>
         <p>Professor Evans' issued a dire warning today to those who 
         wait to start collecting coins. Since the difficulty of mining
         readjusts to the number of miners working on blocks, the longer a
