More news, more fun

--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
     </div>
 
     <div class="news">
+
+        <div class="story">
+        <h3>Internet Pizza for Sale!<small> 2.23.2015</small></h3>
+        <p>Proffessor Evans revealed today that a <a href="http://pizza.bitcoin-class.org">market place</a> for purchasing pizza
+        with pointcoin has just launched. Anonymous sources at office hours on Friday
+        revealed that the first Papa John's pizza was delivered to them for an undisclosed
+        amount.
+        </p>
+        <p>Right now, three different types of pizza are available for purchase from the site.
+        Evan's warned today that given the profusion of pointcoin recently the price for that
+        pizza will be rising.
+        The real operator of the site has yet to reveal himself, but it is suspected that Dave
+        himself is financially backing the operation. More to come...
+        </p>
+        </div>
+
+        <div class="story">
+        <h3>PointCoin is Dead. Long Live PointCoin!<small> 2.15.2015</small></h3>
+        <p>After network outages and numerous forks, teaching staff decided to restart
+        the PointCoin block chain with better rules on Wednesday of this week. The new
+        block chain will have a higher difficulty and a longer block time to prevent the 
+        sort of outages that occured last week.
+        </p>
+        <p>A soft launch of the new PointCoin network was completed on Monday and it has been
+        opened up for students to join since then. At the time of this writing <a href="http://safari.bitcoin-class.org">Point
+            Safari</a> is reporting the new chain faithfully. It is yet to be determined 
+        if this new network is more resilient than the last.
+        </p>
+        </div>
+
         <div class="story">
         <h3>Influx of Miners Coming!<small> 2.9.2015</small></h3>
         <p>Professor Evans' issued a dire warning today to those who 
